--- a/task_2/Dockerfile.backend
+++ b/task_2/Dockerfile.backend
@@ -1,4 +1,4 @@
-ARG BASE_IMAGE=nvidia/cuda:11.3.0-cudnn8-devel-ubuntu20.04
+ARG BASE_IMAGE=nvidia/cuda:11.6.1-cudnn8-devel-ubuntu20.04
 FROM $BASE_IMAGE AS builder
 
 ARG CONDA_ENV_FILE="conda.yml"
@@ -44,7 +44,7 @@ ENV LC_ALL "C.UTF-8"
 ENV NVIDIA_VISIBLE_DEVICES all
 ENV NVIDIA_DRIVER_CAPABILITIES compute,utility
 ENV LD_LIBRARY_PATH /usr/local/cuda/lib64:$LD_LIBRARY_PATH
-ENV PATH /usr/local/cuda-11.3/bin:$PATH
+ENV PATH /usr/local/cuda-11.6/bin:$PATH
 
 USER ${PROJECT_USER}
 
@@ -61,39 +61,13 @@ RUN ${CONDA_BIN} env create -f ${CONDA_ENV_FILE} && \
     ${CONDA_BIN} clean -a -y && \
     echo "conda activate ${CONDA_ENV_NAME}" >> ~/.bashrc && \
     source ~/.bashrc && \
-    conda install -y pytorch==1.12.0 torchvision==0.13.0 torchaudio==0.12.0 cudatoolkit=11.3 -c pytorch
+    conda install pytorch torchvision torchaudio pytorch-cuda=11.6 -c pytorch -c nvidia && \
+    conda install -c "nvidia/label/cuda-11.6.1" cuda-toolkit
 
 FROM builder AS base
 ARG TORCH_CUDA_ARCH_LIST="7.0+PTX"
 
 # activate the backend server
-RUN source ~/.bashrc && \ 
-    cd src && \
-    flask run --no-reload
+WORKDIR /app/src
 
-
-
-
-# # Use an official Python runtime as the base image
-# FROM python:3.9.16-alpine3.17
-
-# # Set the working directory
-# WORKDIR /app
-
-# # Copy requirements.txt
-# COPY requirements_backend.txt /app/requirements.txt
-
-# # Install dependencies
-# RUN pip install -r requirements.txt
-
-# # Copy the rest of the application code
-# COPY . .
-
-# # Set the FLASK_APP environment variable
-# ENV FLASK_APP app.py
-
-# # Go to the app.py file
-# WORKDIR /app/src
-
-# # Run the Flask development server
-# CMD ["flask", "run", "--host=0.0.0.0"]
+ENTRYPOINT ["bash", "-c", "source ~/.bashrc ; flask run --host=0.0.0.0"]
